syntax = "proto3";
package proto;

option go_package = "github.com/nitingoyal0996/reddit-engine/engine/proto";

import "google/protobuf/timestamp.proto";

message User {
    uint64 id = 1;
    string username = 2;
    string email = 3;
    int64 karma = 4;
    google.protobuf.Timestamp created_at = 5;
    google.protobuf.Timestamp last_login = 6;
    repeated Subreddit created_subreddits = 7;
    repeated Subreddit subscriptions = 8;
}

// subreddit and relationship
message Subreddit {
    uint64 id = 1;
    string name = 2;
    string description = 3;
    uint64 creator_id = 4;
    int64 subscriber_count = 5;
    google.protobuf.Timestamp created_at = 7;
    User creator = 9;
    int64 post_count = 10;
}

message UserSubredditSubscription {
    uint64 user_id = 1;
    uint64 subreddit_id = 2;
    google.protobuf.Timestamp subscribed_at = 3;
    User user = 4;
    Subreddit subreddit = 5;
}

// direct messaging
message Message {
    uint64 id = 1;
    string text = 2;
    uint64 from_id = 3;
    uint64 to_id = 4;
    google.protobuf.Timestamp created_at = 5;
}

message Post {
    uint64 id = 1;
    string title = 2;
    string content = 3;
    uint64 author_id = 4;
    uint64 subreddit_id = 5;
    int64 score = 6;
    google.protobuf.Timestamp created_at = 7;
    google.protobuf.Timestamp updated_at = 8;
    User author = 9;
    Subreddit subreddit = 10;
    repeated Comment comments = 11;
    int64 comment_count = 12;
}
message Comment {
    uint64 id = 1;
    string content = 2;
    uint64 user_id = 3;
    uint64 post_id = 4;
    optional uint64 parent_id = 5;
    repeated Comment children = 6;
    google.protobuf.Timestamp created_at = 7;
    google.protobuf.Timestamp updated_at = 8;
    User author = 9;
    Post post = 10;
    int32 votes = 11;

}
